--- a/src/components/dropdown/dropdown.less
+++ b/src/components/dropdown/dropdown.less
@@ -118,9 +118,10 @@
   font-size: 14px;
   font-weight: 400;
   // line-height: 1;
+  padding: 4px 0;
   width: inherit;
   overflow: hidden;
-  padding: 0px;
+  // padding: 0px;
   margin: 0px;
   list-style: none;
   text-align: left;
