--- a/src/components/icon/icon.less
+++ b/src/components/icon/icon.less
@@ -1,5 +1,10 @@
 @import '../../styles/variables.less';
 
 .it-icon {
-  font-size: @default-text-size+2;
+  font-size: @default-text-size+4;
+
+  &--box {
+    padding: 8px;
+    border-radius: 5px;
+  }
 }
