--- a/src/components/textarea/textarea.less
+++ b/src/components/textarea/textarea.less
@@ -3,15 +3,15 @@
 .it-textarea {
   // position: relative;
   padding: 5px 7px;
-      border: 1px solid @color-secondary-text;
-    box-shadow: 0px 1px 1px 0px #d3dae64d;
+  border: 1px solid @color-secondary-text;
+  box-shadow: @input-shadow;
   height: 32px;
   color: #131313;
   background-color: #fff;
   border-radius: @border-radius-base;
   box-sizing: border-box;
-  transition: border 0.2s;
-  transition: background-color 0.2s;
+  transition: border background-color 0.2s;
+  // transition: background-color 0.2s;
 
   &:hover {
     border-color: @color-neutral;
