--- a/src/components/alert/alert.less
+++ b/src/components/alert/alert.less
@@ -7,10 +7,16 @@
   opacity: 0;
 }
 
-.set-type (@color) {
+.set-alert-type (@color) {
   border: 1px solid @color;
+  background-color: tint(@color, 93%);
   .it-alert-icon {
     color: @color;
+  }
+  .it-icon--box {
+    background-color: @color;
+    color: #fff;
+    font-size: 18px !important;
   }
 }
 
@@ -27,17 +33,12 @@
     font-size: 14px;
     font-weight: 600;
     line-height: 1;
-  }
-
-  &-body {
-    font-size: 14px;
-    color: @color-grey-text;
-    margin-top: 10px;
-    line-height: 1;
+    color: @color-black;
   }
 
   &-slot {
     font-size: 14px;
+    color: @color-black;
     line-height: 1;
     margin-top: 10px;
   }
@@ -68,19 +69,19 @@
   }
 
   &--primary {
-    .set-type(@color-primary);
+    .set-alert-type(@color-primary);
   }
   &--success {
-    .set-type(@color-success);
+    .set-alert-type(@color-success);
   }
   &--warning {
-    .set-type(@color-warning);
+    .set-alert-type(@color-warning);
   }
   &--danger {
-    .set-type(@color-danger);
+    .set-alert-type(@color-danger);
   }
 }
 
-.it-alert-iconbox {
-  display: flex;
-}
+// .it-alert-iconbox {
+//   display: flex;
+// }
