--- a/src/components/badge/badge.less
+++ b/src/components/badge/badge.less
@@ -1,6 +1,6 @@
 @import '../../styles/variables.less';
 
-.set-type (@color) {
+.set-badge-type (@color) {
   background-color: @color;
 }
 
@@ -19,19 +19,18 @@
     white-space: nowrap;
     border: 1px solid #fff;
     border-radius: 9px;
-    // box-shadow: #e4e7eb 0px 1px 1px 0px;
 
     &--primary {
-      .set-type(@color-primary);
+      .set-badge-type(@color-primary);
     }
     &--success {
-      .set-type(@color-success);
+      .set-badge-type(@color-success);
     }
     &--warning {
-      .set-type(@color-warning);
+      .set-badge-type(@color-warning);
     }
     &--danger {
-      .set-type(@color-danger);
+      .set-badge-type(@color-danger);
     }
 
     &--corner {
