--- a/src/components/checkbox/checkbox.less
+++ b/src/components/checkbox/checkbox.less
@@ -2,7 +2,7 @@
 
 @it-checkbox-size: 18px;
 
-.set-type (@bg-color) {
+.set-checkbox-type (@bg-color) {
   &:hover {
     border: 1px solid @bg-color;
   }
@@ -62,12 +62,16 @@
       height: 2px;
       left: 7px;
       border-radius: 50px;
-      background: #949494;
+      background: @color-disabled-border;
       content: '';
     }
 
+        &--disabled {
+      color: @color-disabled-border;
+    }
+
     &--linethrough {
-      color: #c4c4c4;
+      color: @color-disabled-border;
       &::before {
         width: calc(100% - 7px);
       }
@@ -87,9 +91,9 @@
 .it-checkbox {
   color: #fff;
   border: 1px solid @color-secondary-text;
-  box-shadow: 0px 1px 1px 0px #d3dae64d;
+  box-shadow: @input-shadow;
   box-sizing: border-box;
-  background-color: #ffffff;
+  background-color: $color;
   position: relative;
   display: inline-block;
   vertical-align: middle;
@@ -110,19 +114,19 @@
   }
 
   &--primary {
-    .set-type(@color-primary);
+    .set-checkbox-type(@color-primary);
   }
   &--success {
-    .set-type(@color-success);
+    .set-checkbox-type(@color-success);
   }
   &--warning {
-    .set-type(@color-warning);
+    .set-checkbox-type(@color-warning);
   }
   &--danger {
-    .set-type(@color-danger);
+    .set-checkbox-type(@color-danger);
   }
   &--black {
-    .set-type(@color-secondary-black);
+    .set-checkbox-type(@color-secondary-black);
   }
   &--neutral {
     &:hover {
@@ -160,13 +164,13 @@
 
   &--disabled {
     cursor: not-allowed;
-    border: 1px solid @color-neutral !important;
+    border: 1px solid @color-disabled-border !important;
     // box-shadow: inset 0 0 0 1px @color-neutral !important;
     background-color: @color-disabled-bg !important;
     text-shadow: none;
     border: none;
     > i {
-      color: @color-neutral !important;
+      color: @color-disabled-border !important;
       text-shadow: none;
     }
 
@@ -176,10 +180,6 @@
         margin-top: 0px;
       }
     }
-  }
-
-  &--disabled + .it-checkbox-label {
-    color: @color-neutral;
   }
 }
 
