--- a/src/components/message/message.less
+++ b/src/components/message/message.less
@@ -1,6 +1,6 @@
 @import '../../styles/variables.less';
 
-.set-type (@color) {
+.set-message-type (@color) {
   .it-message-icon {
     color: @color;
   }
@@ -16,7 +16,7 @@
   margin-left: auto;
   top: 10px;
   padding: 6px 12px;
-  box-shadow: @default-shadow;
+  box-shadow: @popup-shadow;
   border-radius: @border-radius-base;
   // max-width: 150px;
   width: max-content;
@@ -38,15 +38,15 @@
   }
 
   &--primary {
-    .set-type(@color-primary);
+    .set-message-type(@color-primary);
   }
   &--success {
-    .set-type(@color-success);
+    .set-message-type(@color-success);
   }
   &--warning {
-    .set-type(@color-warning);
+    .set-message-type(@color-warning);
   }
   &--danger {
-    .set-type(@color-danger);
+    .set-message-type(@color-danger);
   }
 }
