--- a/src/components/modal/modal.less
+++ b/src/components/modal/modal.less
@@ -28,7 +28,7 @@
     border-radius: @border-radius-base;
     background-color: #fff;
     outline: none;
-    box-shadow: @default-shadow;
+    box-shadow: @popup-shadow;
     cursor: default;
     overflow: hidden;
   }
