--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,4 +1,29 @@
-@import './variables.less';
+@import 'animations.less';
+@import 'variables.less';
+
+@import '../components/alert/alert.less';
+@import '../components/avatar/avatar.less';
+@import '../components/badge/badge.less';
+@import '../components/button/button.less';
+@import '../components/checkbox/checkbox.less';
+@import '../components/dropdown/dropdown.less';
+@import '../components/divider/divider.less';
+@import '../components/icon/icon.less';
+@import '../components/input/input.less';
+@import '../components/loading/loading.less';
+@import '../components/loadingbar/loadingbar.less';
+@import '../components/message/message.less';
+@import '../components/modal/modal.less';
+@import '../components/notification/notification.less';
+@import '../components/numberinput/numberinput.less';
+@import '../components/progressbar/progressbar.less';
+@import '../components/radio/radio.less';
+@import '../components/select/select.less';
+@import '../components/slider/slider.less';
+@import '../components/switch/switch.less';
+@import '../components/tag/tag.less';
+@import '../components/textarea/textarea.less';
+@import '../components/tooltip/tooltip.less';
 
 html {
   font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI,
