--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,6 +1,3 @@
-@import 'index.less';
-@import 'animations.less';
-
 /* Colors */
 @color-primary: #3051ff;
 @color-success: #07d85b;
@@ -8,13 +5,15 @@
 @color-warning: #ffba00;
 @color-black: #131313;
 @color-secondary-black: #232323;
-@color-disabled-bg: #f2f2f2;
+@color-disabled-bg: #f5f6f6;
 @color-grey-text: #5f616c;
 
 @color-neutral: #c4c4c4;
 @color-secondary-text: #d3dae6;
 
 /* Border */
+@color-disabled-border: #c5cbd7;
+@color-default-border: #d3dae6;
 @border-radius-base: 4px;
 @border-radius-round: 40px;
 
@@ -23,5 +22,5 @@
 @default-text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.07);
 
 /* shadows */
-@default-shadow: 0px 0px 1px rgba(0, 0, 0, 0.25),
-  0px 1.5px 1px rgba(0, 0, 0, 0.1);
+@popup-shadow: 0px 0px 1px rgba(0, 0, 0, 0.25), 0px 1.5px 1px rgba(0, 0, 0, 0.1);
+@input-shadow: 0 1px 1px rgba(211, 218, 230, 30%);
