--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -9,7 +9,7 @@
 @import '../components/button/button.less';
 @import '../components/checkbox/checkbox.less';
 @import '../components/collapse/collapse.less';
-// @import '../components/drawer/drawer.less';
+@import '../components/drawer/drawer.less';
 @import '../components/dropdown/dropdown.less';
 @import '../components/divider/divider.less';
 @import '../components/icon/icon.less';
@@ -17,7 +17,7 @@
 @import '../components/loading/loading.less';
 @import '../components/loadingbar/loadingbar.less';
 @import '../components/message/message.less';
-// @import '../components/modal/modal.less';
+@import '../components/modal/modal.less';
 @import '../components/notification/notification.less';
 @import '../components/numberinput/numberinput.less';
 @import '../components/progressbar/progressbar.less';
@@ -25,6 +25,7 @@
 @import '../components/select/select.less';
 @import '../components/slider/slider.less';
 @import '../components/switch/switch.less';
+@import '../components/tabs/tabs.less';
 @import '../components/tag/tag.less';
 @import '../components/textarea/textarea.less';
 @import '../components/tooltip/tooltip.less';
