--- a/src/components/input/input.less
+++ b/src/components/input/input.less
@@ -4,6 +4,7 @@
   &:hover,
   &:focus-within {
     border-color: @bg-color;
+    box-shadow: 0px 2px 4px fade(@bg-color, 40%), 0 0 0 3px fade(@bg-color, 20%);
   }
   &:disabled {
     border-color: @color-disabled-border !important;
@@ -42,6 +43,8 @@
   */
   &:focus-within {
     border: 1px solid @color-primary;
+    box-shadow: 0px 2px 4px fade(@color-primary, 40%), 0 0 0 3px fade(@color-primary, 20%);
+    
     &:hover {
       border-color: @color-primary;
     }
