--- a/src/components/numberinput/numberinput.less
+++ b/src/components/numberinput/numberinput.less
@@ -19,12 +19,9 @@
   overflow: hidden;
   box-sizing: border-box;
   height: 34px;
-  // min-width: 70px;
-  // width: 100%;
   padding: 0 10px;
   position: relative;
-
-  transition: border 0.15s;
+  transition: all 0.2s;
 
   &--disabled {
     border-color: @color-disabled-border !important;
@@ -38,6 +35,7 @@
 
   &:focus-within {
     border: 1px solid @color-primary;
+    box-shadow: 0px 2px 4px fade(@color-primary, 40%), 0 0 0 3px fade(@color-primary, 20%);
     &:hover {
       border-color: @color-primary;
     }
