--- a/src/components/select/select.less
+++ b/src/components/select/select.less
@@ -91,6 +91,7 @@
 
   &:focus:not(&--disabled) {
     border-color: @color-primary;
+    box-shadow: 0px 2px 4px fade(@color-primary, 40%), 0 0 0 3px fade(@color-primary, 20%);
   }
 }
 
