--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -28,6 +28,7 @@
 @import '../components/tabs/tabs.less';
 @import '../components/tag/tag.less';
 @import '../components/textarea/textarea.less';
+@import '../components/toggle/toggle.less';
 @import '../components/tooltip/tooltip.less';
 
 
