Docs are coming

--- a/src/components/avatar/avatar.less
+++ b/src/components/avatar/avatar.less
@@ -17,7 +17,7 @@
   background: @color-secondary-text;
 
   &-max {
-    background: @color-primary;
+    margin-left: 8px;
   }
 
   & > img {
@@ -46,6 +46,7 @@
 
 .it-avatar-group {
   display: flex;
+  align-items: center;
   > .it-avatar {
     border: 2px solid #fff;
   }
