--- a/src/components/select/select.less
+++ b/src/components/select/select.less
@@ -84,6 +84,9 @@
     .it-select-placeholder {
       color: @color-disabled-border;
     }
+    .it-select-arrow {
+      color: @color-disabled-border;
+    }
     &:hover {
       border-color: @color-disabled-border;
     }
