--- a/src/components/textarea/textarea.less
+++ b/src/components/textarea/textarea.less
@@ -9,7 +9,7 @@
   color: #131313;
   -webkit-appearance: none;
   background-color: #fff;
-  z-index: 2;
+  // z-index: 2;
   border-radius: @border-radius-base;
   box-sizing: border-box;
   transition: all 0.2s;
@@ -56,6 +56,6 @@
     bottom: 0;
     left: 0;
     background-color: rgba(90,98,112,0.5);
-    z-index: 1;
+    z-index: 99;
   }
 }
