--- a/src/components/button/button.less
+++ b/src/components/button/button.less
@@ -96,7 +96,7 @@
   justify-content: center;
   font-family: inherit;
   align-items: center;
-  margin: 0;
+  // margin: initial;
   text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.07);
   color: #fff;
   font-weight: @btn-font-weight;
