--- a/src/components/drawer/drawer.less
+++ b/src/components/drawer/drawer.less
@@ -30,6 +30,7 @@
     display: flex;
     flex-direction: column;
     height: calc(100% - 40px);
+    transition-delay: .1s;
     z-index: 99999;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.07),
       0px 7px 14px rgba(50, 50, 93, 0.1), 0px 0px 0px 1px rgba(50, 50, 93, 0.05);
