--- a/src/components/input/input.less
+++ b/src/components/input/input.less
@@ -1,9 +1,11 @@
 @import '../../styles/variables.less';
 
 .set-status (@bg-color) {
-  &:hover,
+  &:hover {
+    border-color: @bg-color !important;
+  }
   &:focus-within {
-    border-color: @bg-color;
+    border-color: @bg-color !important;
     box-shadow: 0px 2px 4px fade(@bg-color, 40%), 0 0 0 3px fade(@bg-color, 20%);
   }
   &:disabled {
@@ -36,15 +38,11 @@
     border-bottom-right-radius: 0;
   }
 
-  /* 
-  TODO: find better way
-  https://caniuse.com/#feat=css-focus-within
-  says 81% of browsers support this feature
-  */
   &:focus-within {
     border: 1px solid @color-primary;
-    box-shadow: 0px 2px 4px fade(@color-primary, 40%), 0 0 0 3px fade(@color-primary, 20%);
-    
+    box-shadow: 0px 2px 4px fade(@color-primary, 40%),
+      0 0 0 3px fade(@color-primary, 20%);
+
     &:hover {
       border-color: @color-primary;
     }
@@ -96,7 +94,6 @@
   &-prefix-wrapper {
     position: relative;
     display: flex;
-    z-index: 2;
   }
 
   &-prefix,
@@ -149,12 +146,13 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: rgba(90,98,112,0.5);
-    z-index: 1;
+    background-color: rgba(90, 98, 112, 0.5);
+    z-index: 99;
   }
 }
 
 .it-input-label {
+  text-align: left;
   display: block;
   font-size: 14px;
   color: @color-secondary-black;
