--- a/src/components/tabs/tabs.less
+++ b/src/components/tabs/tabs.less
@@ -8,6 +8,12 @@
     flex-direction: row;
   }
 
+  &--boxed {
+    border: 1px solid @color-default-border;
+    border-radius: @border-radius-base;
+    box-shadow: 0px 1px 1px 0px rgb(228, 231, 230, 1);
+  }
+
   &-header {
     box-sizing: border-box;
     box-shadow: inset 0 -1px 0 0 @color-default-border;
@@ -27,7 +33,6 @@
       overflow-x: hidden;
       overflow-y: scroll;
 
-
       & > .it-tabs-tab {
         &::after {
           right: 0;
@@ -39,12 +44,11 @@
           transform-origin: right;
         }
 
-
-      &:focus {
-        &::after {
-          transform: scaleX(2);
+        &:focus {
+          &::after {
+            transform: scaleX(2);
+          }
         }
-      }
       }
 
       & > .it-tabs-tab--active {
