--- a/src/components/drawer/drawer.less
+++ b/src/components/drawer/drawer.less
@@ -27,8 +27,7 @@
     background-color: #ffffff;
     border-radius: 8px;
     cursor: default;
-    display: flex;
-    flex-direction: column;
+    overflow: auto;
     height: calc(100% - 40px);
     transition-delay: .1s;
     z-index: 99999;
