--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -21,5 +21,5 @@
 @default-text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.07);
 
 /* shadows */
-@popup-shadow: 0px 0px 1px rgba(0, 0, 0, 0.25), 0px 1.5px 1px rgba(0, 0, 0, 0.1);
+@popup-shadow: 0px 0px 0px 0.6px rgba(0, 0, 0, 0.15), 0px 1.5px 1px rgba(0, 0, 0, 0.1);
 @input-shadow: 0 1px 1px rgba(211, 218, 230, 30%);
