--- a/src/components/modal/modal.less
+++ b/src/components/modal/modal.less
@@ -23,8 +23,8 @@
     display: flex;
     max-height: 100%;
     flex-direction: column;
-    top: -20px;
-    width: 500px;
+    top: -40px;
+    // width: 500px;
     margin: 0 auto;
     border: none;
     border-radius: @border-radius-base;
