--- a/src/components/dropdown/dropdown.less
+++ b/src/components/dropdown/dropdown.less
@@ -27,7 +27,7 @@
 }
 
 .it-dropdown-menu {
-  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.25), 0px 1.5px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: @popup-shadow;
   border-radius: @border-radius-base;
   min-width: 130px;
   font-size: 14px;
