Change active tabs component font-weight without changing containing element width (#163)
* change tabs font-weight without changing containing element width

* remove extra space from diff

Co-authored-by: jack <jack@qec.com>

--- a/src/components/tabs/tabs.less
+++ b/src/components/tabs/tabs.less
@@ -85,6 +85,15 @@
       }
     }
 
+    &::before {
+      display: block;
+      content: attr(data-content);
+      font-weight: 600;
+      height: 0;
+      overflow: hidden;
+      visibility: hidden;
+    }
+
     &::after {
       content: '';
       position: absolute;
