--- a/src/components/select/select.less
+++ b/src/components/select/select.less
@@ -144,7 +144,7 @@
   position: relative;
   font-size: 13px;
   width: inherit;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: 4px 0;
   margin: 0px;
   list-style: none;
