--- a/src/components/tabs/tabs.less
+++ b/src/components/tabs/tabs.less
@@ -24,14 +24,14 @@
     flex-direction: row;
     display: flex;
     flex-wrap: nowrap;
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
 
     &--vertical {
       flex-direction: column;
       box-shadow: inset -1px 0 0 @color-default-border;
       overflow-x: hidden;
-      overflow-y: scroll;
+      overflow-y: auto;
 
       & > .it-tabs-tab {
         &::after {
