--- a/src/components/radio/radio.less
+++ b/src/components/radio/radio.less
@@ -94,7 +94,7 @@
   margin: 0;
   padding: 0;
   position: relative;
-  display: inline-block;
+  display: inline-table;
   border: 1px solid @color-secondary-text;
   width: 18px;
   height: 18px;
