--- a/src/components/tabs/tabs.less
+++ b/src/components/tabs/tabs.less
@@ -71,6 +71,7 @@
   &-tab {
     position: relative;
     padding: 12px;
+    margin: 0;
     font-size: 14px;
     cursor: pointer;
     flex: 0 0 auto;
