FIX: some styles by ItSlider

--- a/src/components/slider/slider.less
+++ b/src/components/slider/slider.less
@@ -8,7 +8,7 @@
   &:not(&--disabled):focus {
     .it-slider-controller {
       box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2),
-        0px 2px 2px rgba(0, 0, 0, 0.12), 0 0 0 3px fade(@color-primary, 20%);
+      0px 2px 2px rgba(0, 0, 0, 0.12), 0 0 0 3px fade(@color-primary, 20%);
       border: 0.8px solid @color-primary;
     }
   }
@@ -25,10 +25,10 @@
     }
   }
   &-label {
-  display: block;
-  font-size: 14px;
-  color: @color-secondary-black;
-  margin-bottom: 14px;
+    display: block;
+    font-size: 14px;
+    color: @color-secondary-black;
+    margin-bottom: 14px;
   }
 
   &-line {
@@ -72,13 +72,14 @@
 
     &-wrapper {
       position: absolute;
-      top: -8px;
+      top: 50%;
+      transform: translate(-50%, -50%);
       line-height: 1;
       z-index: 99;
       background-color: transparent;
-      transform: translateX(-50%);
       user-select: none;
-      cursor: grab;
+      cursor: ew-resize;
+      padding: 4px;
     }
   }
 
