--- a/src/components/modal/modal.less
+++ b/src/components/modal/modal.less
@@ -17,14 +17,11 @@
     height: 100vh;
     width: 100%;
     overflow-y: scroll;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: table;
     transition-delay: .05s;
 
     &-inner {
-      display: flex;
-      justify-content: center;
+      display: table-cell;
       vertical-align: middle;
       padding: 40px 0;
     }
@@ -32,7 +29,6 @@
 
   &-body {
     overflow: hidden;
-    max-width: 90%;
     margin: 0 auto;
     background-color: #fff;
     border: none;
@@ -40,8 +36,17 @@
     outline: none;
     box-shadow: @popup-shadow;
     cursor: default;
+    display: table;
+    width: 100%;
+
     > img {
       max-width: 100%;
+      display: block;
+    }
+
+    &--has-image {
+      width: auto;
+      max-width: 90%;
     }
   }
 
