--- a/src/components/slider/styles.less
+++ b/src/components/slider/styles.less
@@ -7,8 +7,8 @@
 
   &:not(&--disabled):focus {
     .it-slider-controller {
-      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2),
-      0px 2px 2px rgba(0, 0, 0, 0.12), 0 0 0 3px fade(@color-primary, 20%);
+      box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2),
+      0 2px 2px rgba(0, 0, 0, 0.12), 0 0 0 3px fade(@color-primary, 20%);
       border: 0.8px solid @color-primary;
     }
   }
